privacy Police overflow fixed

--- a/index/Main/css/privacy.css
+++ b/index/Main/css/privacy.css
@@ -1,11 +1,20 @@
 .privacyContent{
     text-align: left;
-    padding-left: 10em;
-    padding-right: 10em;
-    padding-top: 10em;
-    height: 100em;
+    padding: 90px;
+    overflow-y: scroll;
+    height: 70vh;
 }
 .privacyContent h1{
     text-align: left;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+}
+.style-privacy, .style-legal {
+    display: flex;
+    justify-content: center;
+    width: 232px;
+}
+.container-privacy-legal {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
