--- a/index/Main/css/style.css
+++ b/index/Main/css/style.css
@@ -262,7 +262,6 @@ footer {
     height: 100vh;
     margin-left: 232px;
     margin-top: 98px;
-    overflow-y: scroll;
 }
 
 .close-button {
